<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.AddProductActivity">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/price"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/quantity"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtSupplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/supplier"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/select_image"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageOfProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image_of_product"
            tools:src="@drawable/slide2" />
    </LinearLayout>
</layout>