<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.StatusActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGray"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@color/lightGray"
                android:gravity="start|center"
                android:paddingStart="@dimen/dimen10dp"
                android:paddingEnd="@dimen/dimen10dp"
                android:text="@string/order_n"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderNumber"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen14sp"
                android:textStyle="bold"
                tools:text="5253532" />

            <TextView
                android:id="@+id/orderDate"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="@dimen/dimen15dp"
                android:layout_weight="1"
                android:gravity="end|center"
                android:textColor="@color/vDarkGray"
                android:textSize="@dimen/dimen14sp"
                android:textStyle="bold"
                tools:text="29/11/2020" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10dp"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/shipping"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10dp"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/marwa_eltayeb"
            android:textColor="@color/vDarkGray"
            android:textSize="@dimen/dimen14sp" />

        <TextView
            android:id="@+id/userAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10dp"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/user_address"
            android:textColor="@color/vDarkGray"
            android:textSize="@dimen/dimen14sp" />

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10dp"
            android:layout_marginBottom="@dimen/dimen10dp"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/dummy_phone"
            android:textColor="@color/vDarkGray"
            android:textSize="@dimen/dimen14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/lightGray"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/items_in_your_order"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/productItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgProductImage"
                android:layout_width="100dp"
                android:layout_height="@dimen/dimen150dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen10dp"
                android:contentDescription="@string/product_image"
                android:src="@drawable/ic_shopping_cart_grey" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtProductName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:layout_marginTop="50dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/samsung_galaxy_a70"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen18sp" />

                <TextView
                    android:id="@+id/txtProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:text="@string/_5399_egp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/lightGray"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/status_bar"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/orderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/item"
            android:textColor="@color/vDarkGray"
            android:textSize="@dimen/dimen16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="@dimen/dimen10dp"
            android:layout_marginTop="@dimen/dimen30dp"
            android:layout_marginRight="@dimen/dimen10dp"
            android:layout_marginBottom="@dimen/dimen10dp"
            android:background="@color/green"
            android:padding="@dimen/dimen10dp"
            android:text="@string/reorder"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen18sp"
            android:textStyle="bold" />
    </LinearLayout>
</layout>