<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameOfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="70dp"
            android:text="@string/marwa_eltayeb"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/emailOfUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/marwa_eltayeb_yahoo_com"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/my_orders"
        android:textSize="20sp"
        android:textColor="@color/vDarkGray" />

</LinearLayout>